# aware-engine

./: .hgignore  CHANGES.txt  CREDITS  README.txt  debug_run.sh  notes.txt  run_win32_generic.bat  run_win64_andy.bat
Game-Data/: README.txt  game.properties
Game-Data/example 2/: room.blend
Game-Data/tech-demo-1/: game.aware
IntelliJ/: AwareEngine.ipr  AwareEngine.iws
Tools/: export_blender_info.py
java/cruxic/aware/: CameraInput.java  CubicViewpoint.java  Develop.java  Engine.java  EngineTimer.java  EquirectViewpoint.java  GLImage.java  GLImageUpload.java  GameWorld.java  HUDContext.java  IOExceptionRt.java  Layout2D.java  Main.java  MenuHandler.java  Mouse2DTracker.java  OpenGLContext.java  Overlay.java  OverlayProcessor.java  OverlaySpec.java  PanoHotspot.java  PanoViewpoint.java  Params.java  Renderer.java  ResourceManager.java  Viewpoint.java  ViewpointSelector.java
java/cruxic/aware/ipo/: ConstantIPO.java  DelayedLinearIPO.java  IPOCurve.java  IPOTimeSource.java  LinearIPO.java  ManualIPOTimeSource.java  RepeatingIPO.java
java/cruxic/aware/menu/: AbstractMenu.java  LeafMenu.java  Menu.java  MenuActionListener.java  MenuRenderer.java  MenuSystem.java  SubMenu.java  ToggleMenu.java
java/cruxic/aware/misc/: WorkingSet.java
java/cruxic/aware/overlays/: Liquid_StaticNoiseOverlay.java  Liquid_StaticNoiseOverlaySpec.java  Liquid_StaticNoiseOverlay_Impl.java  OverlaySpecRegistry.java  StaticImageOverlay.java  Test_SolidOverlay.java  Test_SolidOverlaySpec.java  Test_TransparentOverlay.java  Test_TransparentOverlaySpec.java  Video_LoopedOverlay.java
java/cruxic/aware/tex_cache/: GLTextureCache.java  ImageLoaderPool.java  RamTextureCache.java  ResourceDestructor.java  SizeBasedCache.java  TextureCache.java
java/cruxic/jftgl_copy/: COPYING.txt  FTBBox.java  FTFont.java  FTGLPixmapFont.java  FTGlyph.java  FTGlyphContainer.java  FTPixmapGlyph.java  Vector3f.java  package.html
java/cruxic/math/: CrxMath.java  PtXY.java  Rect4f.java  Rect4i.java  RotationMatrix.java  SphereCoord3f.java  Vec2f.java  Vec2i.java  Vec3f.java
java/cruxic/misc/: Tuple2.java
native/: CMakeLists.txt  GLImage.cpp  GLImage.h  GLImage.hpp  GLImageUpload.cpp  HeightMap.cpp  HeightMap.hpp  ImageMask.cpp  ImageMask.hpp  Liquid_StaticNoiseOverlay_Impl.cpp  Liquid_StaticNoiseOverlay_Impl.hpp  StaticNoiseLiquidRefactionRenderer.cpp  StaticNoiseLiquidRefactionRenderer.hpp  aware_util.cpp  aware_util.h
native/CodeBlocks_project/: libaware.cbp  libaware.depend  libaware.layout  workspace.workspace
native/Dependencies/: ffmpeg-configure-linux.sh
native/Dependencies/Project/png/: png.cbp  png.layout
native/Dependencies/Project/zlib/: zlib.cbp
native/Dependencies/lpng1.2.x/: ANNOUNCE  CHANGES  CMakeLists.txt  INSTALL  KNOWNBUG  LICENSE  README  Y2KINFO  configure  libpng-1.2.47.txt  libpng.3  libpngpf.3  png.5  png.c  png.h  pngconf.h  pngrutil.c  pngtest.c
native/Dependencies/lpng1.2.x/projects/: wince.txt
native/Dependencies/lpng1.2.x/projects/xcode/libpng.xcodeproj/: project.pbxproj
native/Dependencies/lpng1.2.x/scripts/: README.txt  libpng-config-head.in  libpng.pc.in  makefile.32sunu  makefile.64sunu  makefile.aix  makefile.beos  makefile.cegcc  makefile.cygwin  makefile.darwin  makefile.dec  makefile.elf  makefile.gcmmx  makefile.hp64  makefile.hpgcc  makefile.hpux  makefile.linux  makefile.mingw  makefile.ne12bsd  makefile.netbsd  makefile.nommx  makefile.openbsd  makefile.sco  makefile.sggcc  makefile.sgi  makefile.so9  makefile.solaris  makefile.solaris-x86  png32ce.def  pngos2.def  pngw32.def
native/jni/: GLImageUpload_jni.h  GLImage_jni.h  Liquid_StaticNoiseOverlay_Impl_jni.cpp  Liquid_StaticNoiseOverlay_Impl_jni.h  run_javah.py
native/misc/: ArrayList.cpp  ArrayList.hpp  Rect4i.cpp  Rect4i.hpp  libtarga.c  libtarga.html  noise1234.cpp  noise1234.h
native/webm/: cruxic_webm.c  cruxic_webm.h
res/: Where are the files.txt
res/menu/: border.xcf  corner.xcf
res/pointers/: link.xcf
rewrite/: HOWTO_Build.txt  run_linux.sh
rewrite/lua/: main.lua
rewrite/native/: CMakeLists.txt  ae_native.cpp  ae_native.h  ae_native.lzz  ae_native_wrap.cpp  build.sh  main.cpp  toolchain-cross-i686-w64-mingw32.cmake
rewrite/native/luagl/: CMakeLists.txt
